# MadByte

./: LICENSE.txt  README.md  index.html  package-lock.json  package.json
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  persistence.rs
src/Components/: AutostartToggle.jsx  DownloadPathInput.jsx  MaxConcurrentDownloadsInput.jsx  RetrySettings.jsx  SpeedLimiterControl.jsx
src/uis/: anime.js  brutal3.js  glass.js  material.js  morph.js
src/utils/: Opener.js  notification.js
