[package]
name = "mad_byte"
version = "0.1.0"
description = "A Download Manager"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "mad_byte_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }

#serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
dirs = "5.0"
tokio = { version = "1.45.0", features = ["rt", "rt-multi-thread", "macros"] }
thiserror = "2.0.12"
futures-util = "0.3.31"
url = "2.5.4"
tauri-plugin-notification = "2"
bytes = "1.10.1"
tauri-plugin-dialog = "2"
percent-encoding = "2.3"
warp = "0.3.0"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
#tauri-plugin-path = { version = "2"}
#rqbit = { git = "https://github.com/ikatson/rqbit", package = "librqbit", version = "7.0.1" }
#librqbit = { path = "https://github.com/ikatson/rqbit/tree/main/crates/librqbit", features = [
#    "tracing-subscriber-utils",
#    "http-api",
#    "webui",
#    "upnp-serve-adapter",
#] }
